Add button to social media

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -2,3 +2,4 @@
 <p>Find me in app/views/welcome/about.html.erb</p>
 <h1>About Bloccit</h1>
 <p>Created by: Me</p>
+<div><%= link_to "Follow me", "https://www.facebook.com/hannah.balenda", class: "social-btn" %></div>
