--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.social-btn {
+    display: block;
+    height: 40px;
+    width: 150px;
+    padding: 5px;
+    background-color: black;
+    border-radius: 20px;
+    text-align: center;
+    font: bold 23px "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: white;
+    text-decoration:none;
+}
+
+a.social-btn {
+  color: white;
+  text-decoration: none;
+}
+
+a.social-btn:hover {
+color: white;
+font-size: 24px;
+text-decoration: none;
+
+}
