Add Question model and controller, and tests.

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,10 +1,10 @@
-<h1>All Posts</h1>
+<h1>All Questions</h1>
 
-<% @posts.each do |post| %>
+<% @questions.each do |question| %>
   <div class ="media">
     <div class ="media-body">
       <h4 class="media-heading">
-        <%= link_to post.title, post %> </p>
+        <%= link_to question.title, question %> </p>
       </h4>
     </div>
   </div>
