--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -13,7 +13,7 @@
       <%= f.label :title %>
       <%= f.text_field :title, class: 'form-control', placeholder: "Enter post title" %>
     </div>
-    <div class=:"form-group">
+    <div class="form-group">
       <%= f.label :body %>
       <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter post body" %>
     </div>
