--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,9 +17,14 @@
 @import "bootstrap";
 
 .user-info {
-  margin-top: 9px;
+  margin-bottom: 6px;
 }
 
 .nav {
-  margin-top: 5px;
+  margin-top: 14px;
+}
+
+.avatar {
+  margin-right: 5px;
+  margin-bottom: 5px;
 }
