--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,11 +1,13 @@
 <h1><%= @topic.name %></h1>
-<% if user_is_authorized_for_topics? %>
   <div class="col-md-4">
+    <% if user_is_authorized_for_topics? %>
     <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
+    <% end %>
+    <% if user_is_admin? %>
     <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this topic?' } %>
+    <% end %>
   </div>
-<% end %>
-<div class="row">
+  <div class="row">
   <div class="col-md-8">
     <p class="lead"><%= @topic.description %></p>
     <% @topic.posts.each do |post| %>
