--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,6 +4,13 @@
   </small>
 <div class="row">
   <div class="col-md-8">
+    <%= render partial: 'labels/list', locals: { labels: @post.labels } %>
+    <br />
+  </div>
+</div>
+<br />
+<div class="row">
+  <div class="col-md-8">
     <p><%= @post.body %></p>
     <div>
       <h3>Comments</h3>
