--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -19,6 +19,9 @@
         <%= f.text_area :description, rows: 8, class: 'form-control', placeholder:'Enter description' %>
       </div>
       <div class="form-group">
+        <%= render partial: 'labels/form', locals: {f: f, labels: @topic.labels } %>
+      </div>
+      <div class="form-group">
         <%= f.label :public, class:'checkbox' do %>
         <%= f.check_box :public %> Public Topic
         <% end %>
