--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <% end %>
       </div>
   </ul>
-
+<div class="flash">
   <% if flash[:notice] %>
   <div class="alert alert-success">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -41,6 +41,7 @@
     <%= flash[:alert] %>
   </div>
   <% end %>
+</div>
 
 <%= yield %>
 </div>
