Update voting with Ajax

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <div class='.js-voter'>
+  <div class="js-voter">
     <%= render partial: 'votes/voter', locals: { post: @post } %>
   </div>
   <h1>
