--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -14,7 +14,9 @@
       </p>
     <% @topic.posts.each do |post| %>
     <div class="media">
+      <div class="js-voter">
       <%= render partial: 'votes/voter', locals: { post: post } %>
+    </div>
       <div class="media-body">
         <h4 class="media-heading">
           <%= link_to post.title, topic_post_path(@topic, post) %>
